third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_value2.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/invalid_call_lhs_value2.move:3:10
  │
3 │         5();
  │          ^
  │          │
  │          Unexpected '('
  │          Expected ';'
